.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__user_csv.snap
---
source: tests/test_redaction.rs
expression: "&User {\n        id: 44,\n        username: \"julius_csv\".to_string(),\n        email: Email(\"julius@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
id,username,email,extra
[id],julius_csv,julius@example.com,
