.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__user_json_settings_callback.snap
---
source: insta/tests/test_redaction.rs
expression: "&User\n{\n    id: 1234, username: \"jason_doe\".to_string(), email:\n    Email(\"jason@example.com\".to_string()), extra: \"extra here\".to_string(),\n}"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "extra here"
}
