.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__user_ron.snap
---
source: tests/test_redaction.rs
expression: "&User {\n        id: 53,\n        username: \"john_ron\".to_string(),\n        email: Email(\"john@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
User(
  id: "[id]",
  username: "john_ron",
  email: Email("john@example.com"),
  extra: "",
)
