.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__with_random_value.snap
---
source: insta/tests/test_redaction.rs
expression: "&User\n{\n    id: 42, username: \"john_doe\".to_string(), email:\n    Email(\"john@example.com\".to_string()), extra: \"\".to_string(),\n}"
---
id: "[id]"
username: john_doe
email: john@example.com
extra: ""
