.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__with_random_value_json_match.snap
---
source: insta/tests/test_redaction.rs
expression: "&User\n{\n    id: 9999, username: \"jason_doe\".to_string(), email:\n    Email(\"jason@example.com\".to_string()), extra:\n    \"ssn goes here\".to_string(),\n}"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
